Fix Packagist logo image in README

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><a href="https://packagist.org/packages/rogeriopradoj/codeigniter"><img src="https://pbs.twimg.com/profile_images/1674038497/logo-mini.png" alt="Packagist link"></a> <a href="https://packagist.org/packages/rogeriopradoj/codeigniter">https://packagist.org/packages/rogeriopradoj/codeigniter</a></p>
+        <p><a href="https://packagist.org/packages/rogeriopradoj/codeigniter"><img src="https://packagist.org/bundles/packagistweb/img/logo-small.png" alt="Packagist link"></a> <a href="https://packagist.org/packages/rogeriopradoj/codeigniter">https://packagist.org/packages/rogeriopradoj/codeigniter</a></p>
 
 <p>Versions: <a href="https://packagist.org/packages/rogeriopradoj/codeigniter"><img src="https://poser.pugx.org/rogeriopradoj/codeigniter/v/stable.png" alt="Latest Stable Version"></a>
 <a href="https://packagist.org/packages/rogeriopradoj/codeigniter"><img src="https://poser.pugx.org/rogeriopradoj/codeigniter/v/unstable.png" alt="Latest Unstable Version"></a></p>
