--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/rogeriopradoj/codeigniter-composer">View on GitHub</a>
 
           <h1 id="project_title">Codeigniter-composer</h1>
-          <h2 id="project_tagline">A way to install CodeIgniter via composer (rogeriopradoj/codeigniter), if you are looking for the official repo, go to https://github.com/bcit-ci/CodeIgniter</h2>
+          <h2 id="project_tagline">A way to install CodeIgniter via composer (rogeriopradoj/codeigniter), if you are looking for the official repo, go to <a href="https://github.com/bcit-ci/CodeIgniter">https://github.com/bcit-ci/CodeIgniter</a></h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/rogeriopradoj/codeigniter-composer/zipball/master">Download this project as a .zip file</a>
@@ -53,9 +53,9 @@ Today: <a href="https://packagist.org/packages/rogeriopradoj/codeigniter"><img s
 <p>Versions for all major operating systems are available (I mean, even Windows ;-) ).</p>
 
 <h3>
-<a id="require-codeigniter-221-rc2-in-2014-11-25" class="anchor" href="#require-codeigniter-221-rc2-in-2014-11-25" aria-hidden="true"><span class="octicon octicon-link"></span></a>Require Codeigniter (2.2.1-rc.2 in 2014-11-25)</h3>
+<a id="require-codeigniter-224-in-2015-09-26" class="anchor" href="#require-codeigniter-224-in-2015-09-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Require Codeigniter (2.2.4 in 2015-09-26)</h3>
 
-<pre><code> $ composer require "rogeriopradoj/codeigniter 2.2.1-rc.2"
+<pre><code> $ composer require "rogeriopradoj/codeigniter 2.2.4"
 </code></pre>
 
 <h3>
@@ -104,7 +104,7 @@ $ cp vendor/rogeriopradoj/codeigniter/index.php `pwd`
 
 <p>I suggest always using latest tag, even it is <code>-rc</code>.</p>
 
-<p>In 2014 December, 25th, the latest tag is <a href="https://packagist.org/packages/rogeriopradoj/codeigniter#2.2.1-rc.2">2.2.1-rc.2</a></p>
+<p>In 2015 September, 26th, the latest tag is <a href="https://packagist.org/packages/rogeriopradoj/codeigniter#2.2.4">2.2.4</a></p>
 
 <h3>
 <a id="sync-with-official-repo" class="anchor" href="#sync-with-official-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sync with official repo</h3>
