--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Codeigniter-composer</title>
+    <script>
+    // https://konklone.com/post/github-pages-now-sorta-supports-https-so-use-it
+    var host = "rogeriopradoj.github.io";
+    if ((host == window.location.host) && (window.location.protocol != "https:")) {
+      window.location.protocol = "https";
+    }
+    </script>
   </head>
 
   <body>
