--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
+    <link rel="icon" href="images/ico/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png">
+
     <title>Codeigniter-composer</title>
     <script>
     // https://konklone.com/post/github-pages-now-sorta-supports-https-so-use-it
